--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <!-- 菜单 -->
                 <div class="nav-menu">
                     <a href="index.html" class="nav-link">Home</a>
-                    <a href="#blog" class="nav-link">Blog</a>
+                    <a href="#blog-posts-container" class="nav-link">Blog</a>
                     <a href="/pages/about.html" class="nav-link">About</a>
                     <a href="#contact" class="nav-link">Contact</a>
                 </div>
@@ -84,10 +84,11 @@
                     <div class="contact-methods">
                         <div class="method-item">
                             <span class="icon">📧</span>
-                            <a href="mailto:yangcong@example.com">yangcong@example.com</a>
+                            <a href="mailto:yangcong@yangcong33.qzz.io.com">yangcong@yangcong33.qzz.io.com</a>
                         </div>
                         <div class="method-item">
-                            <span class="icon">🐙</span>
+                            <!-- <span class="icon">🐙</span> -->
+                             <span class="icon"><img id="github-icon" src="https://img.icons8.com/?size=100&id=4MhUS4CzoLbx&format=png&color=000000" alt=""></span>
                             <a href="https://github.com/Jacob000-0" target="_blank">Github Profile</a>
                         </div>
                         <div class="method-item">
@@ -133,18 +134,24 @@
             <p class="tiny-text">Powered by <a href="https://github.com/" target="_blank">Github</a></p>
         </footer>
         <!-- Back to Top Button -->
-        <button id="back-tp-top" aria-label="back-to-top">
+        <!-- <button id="back-to-top" aria-label="back-to-top">
             <svg viewBox="0 0 100 100" width="30" height="30" fill="currentColor" stroke="currentColor" stroke-width="2"
                  stroke-linecap="round" stroke-linejoin="round" class="css-18t94oq"
                 >
-                <!-- <path d="M18 151-6-6-6 6"/> -->
+               
                  <path d="M18 15l-6-6-6 6"/>
             </svg>
 
-        </button>
+        </button> -->
         <!-- <button id="back-to-top" aria-label="Back to Top">
             ↑
         </button> -->
+        <button id="back-to-top" aria-label="Back to Top">
+            <!-- 这是一个 SVG 箭头图标 -->
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M18 15l-6-6-6 6"/>
+            </svg>
+        </button>
 
     
     </div>
