--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Jacob 1126137157@qq.com
  * @Date: 2025-11-28 15:56:09
  * @LastEditors: Jacob 1126137157@qq.com
- * @LastEditTime: 2025-11-29 19:07:24
+ * @LastEditTime: 2025-12-02 11:50:57
  * @FilePath: \blog\index.html
  * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
 -->
@@ -12,13 +12,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Yangcong's Blog - Smart Power Grid Researcher & Engineer">
-    <meta name="author" content="Yangcong">
+    <!-- <meta name="author" content="Yangcong"> -->
     <title>Yangcong's Blog</title>
     <!-- Favicon -->
     <!-- <link rel="icon" sizes="any" type="image/svg+xml" href="https://img.icons8.com/color/48/000000/home--v1.png"> -->
      <link rel="icon" sizes="any" href="./static/img/sues_logo.png">
     <!-- 样式 -->
     <link rel="stylesheet" href="static/css/index.css">
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 
 <body>
@@ -28,7 +29,7 @@
         <header id="blog-nav-bar">
             <nav class="nav-container">
                 <div class="nav-brand">
-                    <a href="/" aria-label="Home">
+                    <a href="/" class="nav-brand" aria-label="Home">
                         <img class="brand-logo" src="https://img.icons8.com/?size=100&id=5eVy1OUxmmLB&format=png&color=000000" alt="Yangcong Logo">
                         <span class="brand-name">Yangcong's Blog</span>
                     </a>
@@ -84,7 +85,7 @@
                     <div class="contact-methods">
                         <div class="method-item">
                             <span class="icon">📧</span>
-                            <a href="mailto:yangcong@yangcong33.qzz.io.com">yangcong@yangcong33.qzz.io.com</a>
+                            <a href="mailto:yangcong@yangcong33.qzz.io">yangcong@yangcong33.qzz.io.com</a>
                         </div>
                         <div class="method-item">
                             <!-- <span class="icon">🐙</span> -->
@@ -130,7 +131,7 @@
 
         <!-- 底部 -->
         <footer id="index_footer">
-            <p>&copy; <span id="year">2025</span> <a href="http://yangcong33.qzz.io/" target="_blank">Yangcong's Blog</a>. All rights reserved.</p>
+            <p>&copy; <span id="year">2000</span> <a href="http://yangcong33.qzz.io/" target="_blank">Yangcong's Blog</a>. All rights reserved.</p>
             <p class="tiny-text">Powered by <a href="https://github.com/" target="_blank">Github</a></p>
         </footer>
         <!-- Back to Top Button -->
