--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="nav-menu">
                     <a href="#home" class="nav-link">Home</a>
                     <a href="#blog" class="nav-link">Blog</a>
-                    <a href="#about" class="nav-link">About</a>
+                    <a href="../pages/about.html" class="nav-link">About</a>
                     <a href="#contact" class="nav-link">Contact</a>
                 </div>
             </nav>
